[package]
name = "dm_auto_refactor"
version = "0.1.0"
edition = "2024"

[dependencies]
dm = { package = "dreammaker", git = "https://github.com/spacemaniac/spacemandmm.git", version = "0.1.0" }
dmc = { package = "dreamchecker", git = "https://github.com/spacemaniac/spacemandmm.git" }
interval-tree = { package = "interval-tree", git = "https://github.com/spacemaniac/spacemandmm.git" }
regex = "1.11.1"
rustyline = { version = "16.0.0", features = ["custom-bindings"] }
serde = "*"
serde_json = "*"
