[package]
name = "analysis_companion_sdmm"
version = "0.1.0"
edition = "2024"

[dependencies]
dm = { package = "dreammaker", path = "../sdmm_modified/crates/dreammaker" }
dmc = { package = "dreamchecker", path = "../sdmm_modified/crates/dreamchecker" }
interval-tree = { package = "interval-tree", path = "../sdmm_modified/crates/interval-tree" }
regex = "1.11.1"
ron = "0.10.1"
rustyline = { version = "16.0.0", features = ["custom-bindings"] }
serde = "*"
serde_json = "*"
